added offwhite bg color

--- a/src/scss/_myvariables.scss
+++ b/src/scss/_myvariables.scss
@@ -1,12 +1,13 @@
 //Colors
-$primaryBlue: #1E86FF;
+$primaryBlue: #1e86ff;
 $darkPurple: #282538;
-$white: #FFFFFF;
-$lightGray: #B9BDCF;
+$white: #ffffff;
+$lightGray: #b9bdcf;
 $blueGray: #334680;
-$offGray: #B7BCCE;
-$footerGray: #B9BDCF;
+$offGray: #b7bcce;
+$footerGray: #b9bdcf;
+$offWhite: #f6f7fb;
 //Fonts
-$montserrat: 'Montserrat', sans-serif;
-$poppins: 'Poppins', sans-serif;
-$roboto: 'Roboto', sans-serif;
+$montserrat: "Montserrat", sans-serif;
+$poppins: "Poppins", sans-serif;
+$roboto: "Roboto", sans-serif;
