basic styling for page wrapper

--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -24,3 +24,11 @@
       -ms-flex-direction: row;
           flex-direction: row;
 }
+
+.page__wrapper {
+  background-color: #f6f7fb;
+}
+
+.card__wrapper {
+  font-family: "Roboto", sans-serif;
+}
