--- a/src/scss/_positionsearchbar.scss
+++ b/src/scss/_positionsearchbar.scss
@@ -4,7 +4,59 @@
   background-position: center;
   background-size: cover;
   max-width: 1200px;
+  min-width: 1000px;
   min-height: 138px;
   border-radius: 8px;
   margin-top: 32px;
+  justify-content: center;
+  align-items: center;
+}
+
+.input__container {
+  max-width: 800px;
+  position: relative;
+  min-width: 790px;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.input__icon {
+  color: $lightGray;
+  position: absolute;
+  top: 50%;
+  transform: translateY(calc(-50%));
+  left: 2%;
+}
+
+.search__input {
+  width: 100%;
+  height: 56px;
+  border-radius: 4px;
+  border: none;
+  text-indent: 40px;
+  &::placeholder {
+    font-family: $roboto;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    color: $footerGray;
+  }
+}
+
+.search__btn {
+  position: absolute;
+  right: 0.7%;
+  top: 8%;
+  font-family: $roboto;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  border: none;
+  border-radius: 4px;
+  padding: 14px 48px;
+  background-color: $primaryBlue;
+  color: $white;
+  cursor: pointer;
+  &:hover {
+    background-color: lighten($primaryBlue, 10%);
+  }
 }
