--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -123,9 +123,93 @@
   background-position: center;
   background-size: cover;
   max-width: 1200px;
+  min-width: 1000px;
   min-height: 138px;
   border-radius: 8px;
   margin-top: 32px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.input__container {
+  max-width: 800px;
+  position: relative;
+  min-width: 790px;
+  -webkit-box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+}
+
+.input__icon {
+  color: #b9bdcf;
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(calc(-50%));
+          transform: translateY(calc(-50%));
+  left: 2%;
+}
+
+.search__input {
+  width: 100%;
+  height: 56px;
+  border-radius: 4px;
+  border: none;
+  text-indent: 40px;
+}
+
+.search__input::-webkit-input-placeholder {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #b9bdcf;
+}
+
+.search__input:-ms-input-placeholder {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #b9bdcf;
+}
+
+.search__input::-ms-input-placeholder {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #b9bdcf;
+}
+
+.search__input::placeholder {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #b9bdcf;
+}
+
+.search__btn {
+  position: absolute;
+  right: 0.7%;
+  top: 8%;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 19px;
+  border: none;
+  border-radius: 4px;
+  padding: 14px 48px;
+  background-color: #1e86ff;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.search__btn:hover {
+  background-color: #51a1ff;
 }
 
 .footer__sign {
