--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -216,6 +216,97 @@
   background-color: #51a1ff;
 }
 
+.sidebar__checkbox {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 12px;
+}
+
+.fulltime__checkbox {
+  border: solid 1px #b9bdcf;
+  height: 18px;
+  width: 18px;
+  cursor: pointer;
+}
+
+.fulltime__text {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  color: #334680;
+}
+
+.sidebar__title {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
+  color: #b9bdcf;
+  margin-top: 32px;
+}
+
+.input__container--location {
+  min-width: 379px;
+  position: relative;
+  margin-top: 16px;
+}
+
+.location__search {
+  width: 100%;
+  background-color: #ffffff;
+  height: 48px;
+  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
+  border: none;
+  text-indent: 48px;
+}
+
+.location__search::-webkit-input-placeholder {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #b9bdcf;
+}
+
+.location__search:-ms-input-placeholder {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #b9bdcf;
+}
+
+.location__search::-ms-input-placeholder {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #b9bdcf;
+}
+
+.location__search::placeholder {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 14px;
+  color: #b9bdcf;
+}
+
+.search__icon {
+  position: absolute;
+  color: #b9bdcf;
+  top: 50%;
+  -webkit-transform: translateY(calc(-50%));
+          transform: translateY(calc(-50%));
+  z-index: 2;
+  left: 5%;
+}
+
 .footer__sign {
   width: 100%;
   font-family: "Montserrat", sans-serif;
