--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -48,6 +48,10 @@
 
 .bottom__container {
   margin-top: 40px;
+  gap: 32px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .results {
