--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -19,6 +19,12 @@
   align-items: center;
 }
 
+.page__header {
+  width: 100%;
+  display: flex;
+  margin-left: 30%;
+}
+
 .header__logo {
   font-family: $poppins;
   font-weight: 300;
