--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -54,3 +54,9 @@
   margin-right: 15%;
   margin-top: 32px;
 }
+
+.active {
+  background-color: $primaryBlue !important;
+  color: $white !important;
+  border: 1px solid transparent !important;
+}
