--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -74,6 +74,12 @@
   margin-top: 32px;
 }
 
+.active {
+  background-color: #1e86ff !important;
+  color: #ffffff !important;
+  border: 1px solid transparent !important;
+}
+
 .card__wrapper {
   font-family: "Roboto", sans-serif;
   gap: 16px;
