--- a/src/scss/_resultcard.scss
+++ b/src/scss/_resultcard.scss
@@ -10,6 +10,7 @@
 
 .card__info {
   justify-content: center;
+  min-width: 200px;
 }
 
 .card__img {
@@ -31,6 +32,7 @@
   line-height: 21px;
   color: $blueGray;
   margin-top: 8px;
+  max-width: 200px;
 }
 
 .info__badge {
@@ -47,8 +49,10 @@
 
 .card__details {
   align-self: flex-end;
+  justify-content: flex-end;
   color: $footerGray;
   gap: 16px;
+  flex: 1;
 }
 
 .detail__item {
