--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -31,6 +31,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  max-width: 1440px;
 }
 
 .page__header {
