--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -3,6 +3,10 @@
   margin: 0;
 }
 
+#root {
+  background-color: $offWhite;
+}
+
 .flex-col {
   display: flex;
   flex-direction: column;
@@ -18,7 +22,6 @@
   min-height: 100vh;
   align-items: center;
   max-width: 1440px;
-  margin: 0 auto;
 }
 
 .page__header {
