--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -5,6 +5,10 @@
   margin: 0;
 }
 
+#root {
+  background-color: #f6f7fb;
+}
+
 .flex-col {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -32,7 +36,6 @@
       -ms-flex-align: center;
           align-items: center;
   max-width: 1440px;
-  margin: 0 auto;
 }
 
 .page__header {
