--- a/src/scss/_resultcard.scss
+++ b/src/scss/_resultcard.scss
@@ -43,7 +43,7 @@
   padding: 6px 8px;
   border: solid 1px $blueGray;
   border-radius: 4px;
-  width: 65px;
+  width: fit-content;
   margin-top: 12px;
 }
 
