global layout changes

--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -32,6 +32,13 @@
 .page__wrapper {
   background-color: #f6f7fb;
   min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  place-content: center;
+}
+
+.content__wrapper {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
