cursor pointer on radio btns

--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -71,6 +71,7 @@
 input[type="radio"] {
   border: solid 1px $lightGray;
   background-color: transparent;
+  cursor: pointer;
   &:active {
     color: $primaryBlue;
   }
