--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -374,6 +374,7 @@
 input[type="radio"] {
   border: solid 1px #b9bdcf;
   background-color: transparent;
+  cursor: pointer;
 }
 
 input[type="radio"]:active {
