--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -50,7 +50,6 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-left: 30%;
 }
 
 .header__logo {
@@ -395,6 +394,7 @@ input[type="radio"]:active {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  cursor: pointer;
 }
 
 .sidebar__back .back__text {
