added max width to lottie container

--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -56,6 +56,10 @@
   gap: 32px;
 }
 
+.lottie__container {
+  max-width: 580px;
+}
+
 .pagination__wrapper {
   place-content: flex-end;
   gap: 12px;
