--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -77,6 +77,10 @@
   gap: 32px;
 }
 
+.lottie__container {
+  max-width: 580px;
+}
+
 .pagination__wrapper {
   place-content: flex-end;
   gap: 12px;
