--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&family=Poppins:wght@300;500;700&family=Roboto:wght@400;500;700&display=swap");
 @import "myvariables";
+@import "rem-mixin";
+@import "responsive-mixin";
 @import "globals";
 @import "resultcard";
 @import "positionsearchbar";
