--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -50,6 +50,9 @@
   margin-top: 40px;
   gap: 32px;
   justify-content: center;
+  @include respond-below(md) {
+    flex-direction: column;
+  }
 }
 
 .results {
