--- a/src/scss/_positionsearchbar.scss
+++ b/src/scss/_positionsearchbar.scss
@@ -11,7 +11,7 @@
   justify-content: center;
   align-items: center;
   @include respond-below(md) {
-    min-width: 0;
+    min-width: 570px;
   }
 }
 
@@ -20,6 +20,9 @@
   position: relative;
   min-width: 790px;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+  @include respond-below(md) {
+    min-width: 315px;
+  }
 }
 
 .input__icon {
@@ -36,12 +39,21 @@
   border-radius: 4px;
   border: none;
   text-indent: 40px;
+  text-overflow: ellipsis;
   &::placeholder {
     font-family: $roboto;
     font-weight: 400;
     font-size: 12px;
     line-height: 14px;
     color: $footerGray;
+    overflow: hidden;
+
+    display: inline-block;
+  }
+  @include respond-below(md) {
+    &::placeholder {
+      width: 60%;
+    }
   }
 }
 
@@ -61,5 +73,8 @@
   cursor: pointer;
   &:hover {
     background-color: lighten($primaryBlue, 10%);
+  }
+  @include respond-below(md) {
+    padding: 14px 27px;
   }
 }
