--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -236,6 +236,12 @@
   left: 2%;
 }
 
+@media (max-width: 991px) {
+  .input__icon {
+    left: 5%;
+  }
+}
+
 .search__input {
   width: 100%;
   height: 56px;
