pagination wrapper size + responsive

--- a/src/scss/_globals.scss
+++ b/src/scss/_globals.scss
@@ -67,8 +67,11 @@
   place-content: flex-end;
   gap: 12px;
   width: 100%;
-  margin-right: 15%;
   margin-top: 32px;
+  max-width: 1440px;
+  @include respond-below(md) {
+    max-width: 568px;
+  }
 }
 
 .active {
