--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -132,8 +132,18 @@
 
 .card__img {
   max-width: 100%;
+  max-height: 100%;
   width: 90px;
   border-radius: 4px;
+}
+
+@media (max-width: 991px) {
+  .card__infos {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 
 .info__company {
@@ -177,6 +187,12 @@
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+
+@media (max-width: 991px) {
+  .card__details {
+    margin-top: 16px;
+  }
 }
 
 .detail__item {
