content wrapper 8px padding on bmd

--- a/src/scss/_article.scss
+++ b/src/scss/_article.scss
@@ -1,5 +1,9 @@
 .article__wrapper {
   gap: 64px;
+  @include respond-below(md) {
+    flex-direction: column;
+    gap: 32px;
+  }
 }
 
 .details__header {
